interstellar/tests/gql/snapshots/gql__snapshots__parse_create_edge_type_different_types_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateEdgeType:
    name: WORKS_AT
    properties:
      - name: role
        prop_type: String
        required: true
        default: ~
      - name: start_date
        prop_type: Int
        required: false
        default: ~
    from_types:
      - Person
    to_types:
      - Company
