interstellar/tests/gql/snapshots/gql__snapshots__parse_create_edge_type_empty_props_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateEdgeType:
    name: FOLLOWS
    properties: []
    from_types:
      - Person
    to_types:
      - Person
