interstellar/tests/gql/snapshots/gql__snapshots__parse_create_edge_type_with_default_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateEdgeType:
    name: KNOWS
    properties:
      - name: since
        prop_type: Int
        required: false
        default: ~
      - name: weight
        prop_type: Float
        required: false
        default:
          Float: 1
    from_types:
      - Person
    to_types:
      - Person
