interstellar/tests/gql/snapshots/gql__snapshots__parse_create_node_type_empty_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateNodeType:
    name: Tag
    properties: []
