interstellar/tests/gql/snapshots/gql__snapshots__parse_create_node_type_with_default_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateNodeType:
    name: Person
    properties:
      - name: name
        prop_type: String
        required: true
        default: ~
      - name: age
        prop_type: Int
        required: false
        default: ~
      - name: active
        prop_type: Bool
        required: false
        default:
          Bool: true
