interstellar/tests/gql/snapshots/gql__snapshots__parse_create_single_vertex_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Create:
        patterns:
          - elements:
              - Node:
                  variable: p
                  labels:
                    - Person
                  properties:
                    - - name
                      - String: Alice
                    - - age
                      - Int: 30
                  where_clause: ~
  foreach_clauses: []
  return_clause: ~
