interstellar/tests/gql/snapshots/gql__snapshots__parse_ddl_case_insensitive_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateNodeType:
    name: person
    properties:
      - name: name
        prop_type: String
        required: true
        default: ~
      - name: age
        prop_type: Int
        required: false
        default: ~
